# calc_cli

./: .clang-format  .clang-tidy  CMakeLists.txt
include/calc_cli/: calculator.h  context.h  logger.h  parser.h  printer.h  runner.h
src/: calculator.cpp  logger.cpp  main.cpp  parser.cpp  printer.cpp  runner.cpp
tests/: calc_cli_tests.cpp
